# networking

./: .gitignore  CMakeLists.txt  forward.hpp  network_device.hpp  reader.hpp  utility.hpp
include/networking/address/v4/: address_v4.h  address_v4_type.h
include/networking/defines/: export.h
include/networking/defines/export/: export.h
include/networking/defines/handle/: opaque_handle.h
include/networking/defines/opaque/: opaque.h
include/networking/export/: init.h
include/networking/export/address/: v4.h
include/networking/export/interface/: io_request.h
include/networking/export/io_request/: io_request_init.h  io_request_manip.h
include/networking/export/tcp/: tcp_aio_init.h  tcp_aio_manip.h  tcp_init.h  tcp_manip.h
include/networking/interface/: io_request.h
include/networking/interface/address/: v4.h
include/networking/interface/tcp/: tcp.h
include/networking/io_request/: io_request_init.h  io_request_manip.h
include/networking/io_request/details/: ioreq_init.h  ioreq_manip.h  ioreq_type.h
include/networking/module/: main.h  tcp_module_type.h
include/networking/protocol/tcp/: tcp.h  tcp_conn.h  tcp_init.h  tcp_io.h  tcp_type.h
include/networking/tcp/: tcp_connect.h  tcp_init.h  tcp_manip.h
include/networking/tcp/aio/: aio_tcp_connect.h  aio_tcp_init.h  aio_tcp_manip.h
include/networking/tcp/details/: tcp_connect.h  (+3 more)
ip/address/: v4_address.hpp  v6_address.hpp
ip/tcp/: tcp.hpp  tcp_operation.hpp
module/: tcp_module_main.h
module/export/: synapse-networking-module.exp  synapse-networking-module.lib
module/include/: modules.h
module/source/: modules.c  tcp_module_main.c  tcp_server_module_main.c
module/x64/debug/: synapse-networking-module.exp  synapse-networking-module.lib
project_files/vs2022/synapse-networking/: synapse-networking.sln
project_files/vs2022/synapse-networking-address/: synapse-networking-address.sln
project_files/vs2022/synapse-networking-tcp/: synapse-networking-tcp.sln
project_files/vs2022/synapse-networking-tcp-module/: synapse-networking-tcp-module.sln
socket_base/: socket.hpp
source/address/v4/: address_v4.c
source/lib/: CMakeLists.txt
source/lib/address/v4/: address_v4.c
source/lib/address/v4/details/: networking_address_v4.c
source/lib/io_request/: io_request_init.c  io_request_manip.c
source/lib/io_request/details/: ioreq_init.c  ioreq_manip.c
source/lib/tcp/: tcp_connect.c  tcp_init.c  tcp_manip.c
source/lib/tcp/aio/: aio_tcp_connect.c  aio_tcp_init.c  aio_tcp_manip.c
source/lib/tcp/details/: net_tcp_connect.c  net_tcp_init.c  net_tcp_manip.c
source/lib/tcp/details/aio/: net_aio_tcp_init.c  net_aio_tcp_manip.c
source/module/: main.c
source/protocol/tcp/: tcp_conn.c  tcp_init.c  tcp_io.c
source/shared_lib/: CMakeLists.txt  init.c
source/shared_lib/address/: v4.c
source/shared_lib/io_request/: io_request_init.c  io_request_manip.c
source/shared_lib/tcp/: tcp_aio_init.c  tcp_aio_manip.c  tcp_init.c  tcp_manip.c
tcp/: tcp.hpp
(+130 files in other folders)
